Fix CORS in SecurityConfig and WebSocketConfig